sandbox/home-assistant/network-policies/allow-egress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-egress-to-dns-and-internet
  namespace: home-assistant
spec:
  podSelector:
    matchLabels:
      app: home-assistant
  policyTypes:
    - Egress
  egress:
    # Allow DNS lookups
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
          podSelector:
            matchLabels:
              k8s-app: kube-dns
      ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53
    # Allow access to the internet
    - to:
        - ipBlock:
            cidr: 0.0.0.0/0
            except:
              # Default k3s pod CIDR
              - 10.42.0.0/16
              # Default k3s service CIDR
              - 10.43.0.0/16
      ports:
        - protocol: TCP
          port: 443
        - protocol: TCP
          port: 80
    # Allow to k8s server
    - to:
        - ipBlock:
            cidr: 10.43.0.1/32
      ports:
        - protocol: TCP
          port: 443
